Add error page and redirect

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Author URL: http://w3layouts.com
                             <img src="assets/images/coctel.jpg" class="img-responsive" alt="" />
                             <div class="img-ban-sec">
                                 <h5>Cócteles</h5>
-                                <a href="menu.html" class="btn p-0">Más <i class="fa fa-angle-right ml-1"
+                                <a href="error.html" class="btn p-0">Más <i class="fa fa-angle-right ml-1"
                                         aria-hidden="true"></i></a>
                             </div>
                         </div>
@@ -89,7 +89,7 @@ Author URL: http://w3layouts.com
                             <img src="assets/images/comida.jpg" class="img-responsive" alt="" />
                             <div class="img-ban-sec">
                                 <h5>Comida</h5>
-                                <a href="menu.html" class="btn p-0">Más <i class="fa fa-angle-right ml-1"
+                                <a href="error.html" class="btn p-0">Más <i class="fa fa-angle-right ml-1"
                                         aria-hidden="true"></i></a>
                             </div>
                         </div>
@@ -170,7 +170,7 @@ Author URL: http://w3layouts.com
                             </div>
                         </div>
                     </div>
-                    <a class="btn btn-style-dark btn-style-border-dark mt-5" href="menu.html">Ver Más</a>
+                    <a class="btn btn-style-dark btn-style-border-dark mt-5" href="error.html">Ver Más</a>
                 </div>
                 <div class="col-lg-6 recipe-right pl-5">
                     <img src="assets/images/image1.svg" alt="" class="img-fluid img-responsive" />
@@ -271,74 +271,74 @@ Author URL: http://w3layouts.com
                 </div>
                 <div class="row galler-top">
                     <div class="col-md-4 col-sm-6 protfolio-item hover14">
-                        <a href="menu.html" data-lightbox="example-set" data-title="Branding Design">
+                        <a href="error.html" data-lightbox="example-set" data-title="Branding Design">
                             <figure>
                                 <img src="assets/images/g1.jpg" alt="product" class="img-fluid">
                                 <div class="p-4">
                                     <p class="text-black">Prodigio</p>
-                                    <a href="menu.html" class="mb-5 img-title text-black">Cóctel de Camarón</a>
+                                    <a href="error.html" class="mb-5 img-title text-black">Cóctel de Camarón</a>
                                 </div>
                             </figure>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-sm-0 mt-4">
-                        <a href="menu.html" data-lightbox="example-set" data-title="Gradient Website Development">
+                        <a href="error.html" data-lightbox="example-set" data-title="Gradient Website Development">
                             <figure>
                                 <img src="assets/images/g2.jpg" alt="product" class="img-fluid">
                                 <div class="p-4">
                                     <p class="text-black">Prodigio</p>
-                                    <a href="menu.html" class="mb-5 img-title text-black">Guacamole de chicharrón</a>
+                                    <a href="error.html" class="mb-5 img-title text-black">Guacamole de chicharrón</a>
                                 </div>
                             </figure>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-md-0 mt-4">
-                        <a href="menu.html" data-lightbox="example-set" data-title="Design and Development">
+                        <a href="error.html" data-lightbox="example-set" data-title="Design and Development">
                             <figure>
                                 <img src="assets/images/g3.jpg" alt="product" class="img-fluid">
                                 <div class="p-4">
                                     <p class="text-black">Prodigio</p>
-                                    <a href="menu.html" class="mb-5 img-title text-black">Queso parrillada</a>
+                                    <a href="error.html" class="mb-5 img-title text-black">Queso parrillada</a>
                                 </div>
                             </figure>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-4">
-                        <a href="menu.html" data-lightbox="example-set" data-title="Magazine Content Writing">
+                        <a href="error.html" data-lightbox="example-set" data-title="Magazine Content Writing">
                             <figure>
                                 <img src="assets/images/g4.jpg" alt="product" class="img-fluid">
                                 <div class="p-4">
                                     <p class="text-black">Prodigio</p>
-                                    <a href="menu.html" class="mb-5 img-title text-black">Totopos Jalisco</a>
+                                    <a href="error.html" class="mb-5 img-title text-black">Totopos Jalisco</a>
                                 </div>
                             </figure>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-4">
-                        <a href="menu.html" data-lightbox="example-set" data-title="Magazine Content Writing">
+                        <a href="error.html" data-lightbox="example-set" data-title="Magazine Content Writing">
                             <figure>
                                 <img src="assets/images/g5.jpg" alt="product" class="img-fluid">
                                 <div class="p-4">
                                     <p class="text-black">Prodigio</p>
-                                    <a href="menu.html" class="mb-5 img-title text-black">Molcajete de camarón</a>
+                                    <a href="error.html" class="mb-5 img-title text-black">Molcajete de camarón</a>
                                 </div>
                             </figure>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-4">
-                        <a href="menu.html" data-lightbox="example-set" data-title="Magazine Content Writing">
+                        <a href="error.html" data-lightbox="example-set" data-title="Magazine Content Writing">
                             <figure>
                                 <img src="assets/images/g6.jpg" alt="product" class="img-fluid">
                                 <div class="p-4">
                                     <p class="text-black">Prodigio</p>
-                                    <a href="menu.html" class="mb-5 img-title text-black">Langostino al panko</a>
+                                    <a href="error.html" class="mb-5 img-title text-black">Langostino al panko</a>
                                 </div>
                             </figure>
                         </a>
                     </div>
                 </div>
                 <div class="text-center">
-                    <a href="menu.html" class="btn btn-style-white btn-style-primary mt-lg-5 mt-2">Ver Nuestro Menú</a>
+                    <a href="error.html" class="btn btn-style-white btn-style-primary mt-lg-5 mt-2">Ver Nuestro Menú</a>
                 </div>
             </div>
         </div>
