Add menu, fix comments

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@ Author URL: http://w3layouts.com
                             <a class="nav-link" href="about.html">Acerca de nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Menú</a>
+                            <a class="nav-link" href="menu.html">Menú</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contáctanos</a>
@@ -365,10 +365,7 @@ Author URL: http://w3layouts.com
                         <h6 class="foot-sub-title">Contáctanos</h6>
 
                         <div class="main-social-footer-29">
-                            <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
-                            <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
-                            <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
-                            <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
+                            <a href="https://www.instagram.com/prodigiogastrobar/" class="instagram" target="_blank"><span class="fa fa-instagram"></span></a>
                         </div>
                     </div>
                 </div>
@@ -376,18 +373,18 @@ Author URL: http://w3layouts.com
                     <div class="col-lg-3 col-sm-6">
                         <div class="address-grid">
                             <h5>Carrera 1 N° 71 - 301, Terrazas de la Florida, <br> Manizales Caldas.</h5>
-                            <h5 class="mt-sm-5 mt-4">Martes - Jueves: <span> 2 PM - 10 PM</span> <br> Viernes - Domingo: <span> 2 PM - 12 PM</span></h5>
+                            <h5 class="mt-sm-5 mt-4">Martes a Jueves - Domingo: <br><span> 2 PM - 10 PM</span> <br> Viernes - Sabado: <br><span> 2 PM - 2 AM</span></h5>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6 mt-sm-0 mt-4">
                         <div class="address-grid">
                             <h5>Telefono</h5>
-                            <h5 class="phone-number-text mt-2"><a href="tel:+57 3213772519">(+57)321 1232312</a></h5>
+                            <h5 class="phone-number-text mt-2"><a href="tel:+57 3206339067">(+57)320 6339067</a></h5>
                         </div>
                         <div class="address-grid mt-sm-5 mt-4">
                             <h5>E-mail</h5>
-                            <h5 class="email-cont-text mt-1"> <a href="mailto:prodigio@mail.com"
-                                    class="mail">prodigio@mail.com</a></h5>
+                            <h5 class="email-cont-text mt-1"> <a href="mailto:prodigiogastrobar1@gmail.com"
+                                    class="mail">prodigiogastrobar1@gmail.com</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-6 col-sm-5 footer-list-menu pl-lg-0 mt-lg-0 mt-sm-5 mt-4">
