--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@ Author URL: http://w3layouts.com
                             <a class="nav-link" href="about.html">Acerca de nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Menú</a>
+                            <a class="nav-link" href="menu.html">Menú</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="contact.html">Contáctanos</a>
@@ -98,58 +98,28 @@ Author URL: http://w3layouts.com
                     <div class="contact-info">
                         <span class="fa fa-phone" aria-hidden="true"></span>
                         <h4>Teléfono</h4>
-                        <p><a href="tel:+44 7834 857829">+57 321 3123456</a></p>
-                        <p><a href="tel:+44 987 654 321">+57 321 6543213</a></p>
+                        <p><a href="tel:+57 3206339067">+57 320 6339067</a></p>
                     </div>
                     <div class="contact-info">
                         <span class="fa fa-envelope" aria-hidden="true"></span>
                         <h4>Email</h4>
-                        <p><a href="mailto:mail@example.com" class="email">mail@example.com</a></p>
-                        <p><a href="mailto:mail@example1.com" class="email">mail@example1.com</a></p>
+                        <p><a href="mailto:mail@example.com" class="email">prodigiogastrobar1@gmail.com</a></p>
                     </div>
                     <div class="contact-info">
                         <span class="fa fa-clock-o" aria-hidden="true"></span>
                         <h4>Horario de atención</h4>
-                        <p>Martes - Domingo</p>
-                        <p>2:00 PM - 9:00 PM</p>
+                        <p>Martes a Jueves - Domingo</p>
+                        <p>2:00 PM - 10:00 PM</p>
+                        <p>Viernes - Sabado</p>
+                        <p>2:00 PM - 2:00 AM</p>
                     </div>
                 </div>
             </div>
             <div class="form-41-mian mt-5 pt-lg-5 pt-md-4">
                 <div class="container">
-                    <div class="form-inner-cont">
-                        <form action="https://sendmail.w3layouts.com/submitForm" method="post" class="signin-form">
-                            <div class="row align-form-map">
-                                <div class="col-sm-6 form-input">
-                                    <label for="w3lName">Nombre</label>
-                                    <input type="text" name="w3lName" id="w3lName" placeholder="" />
-                                </div>
-                                <div class="col-sm-6 form-input">
-                                    <label for="w3lSender">Email(Obligatorio)*</label>
-                                    <input type="email" name="w3lSender" id="w3lSender" placeholder="" required="" />
-                                </div>
-                                <div class="col-sm-6 form-input">
-                                    <label for="w3lSender">Asunto*</label>
-                                    <input type="text" name="w3lSubect" placeholder="" class="contact-input">
-                                </div>
-                                <div class="col-sm-6 form-input">
-                                    <label for="w3lSender">Número Celular*</label>
-                                    <input type="number" name="w3lPhone" placeholder="" class="contact-input">
-                                </div>
-                            </div>
-                            <div class="form-input">
-                                <label for="w3lMessage">Mensaje(Obligatorio)*</label>
-                                <textarea placeholder="" name="w3lMessage" id="w3lMessage" required=""></textarea>
-                            </div>
-                            <div class="submit text-right">
-                                <button type="submit" class="btn btn-style-white btn-style-primary">Enviar
-                                    Mensaje</button>
-                            </div>
-                        </form>
-                    </div>
                     <div class="map mt-5">
                         <iframe
-                            src=https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d351.2950126229674!2d-75.47946066536618!3d5.030633551613829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4765fe94e33991%3A0x9b21677be2042b19!2sLa%20Casa%20Azulada!5e0!3m2!1ses-419!2sco!4v1726371978714!5m2!1ses-419!2sco"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3974.448695908244!2d-75.48191122516938!3d5.030743938708353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e47650026b08fbb%3A0x42060e55878adfce!2sPRODIGIO%20GASTRO%20BAR!5e0!3m2!1ses-419!2sco!4v1726934816461!5m2!1ses-419!2sco"
                             frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                 </div>
@@ -172,10 +142,7 @@ Author URL: http://w3layouts.com
                         <h6 class="foot-sub-title">Contáctanos</h6>
 
                         <div class="main-social-footer-29">
-                            <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
-                            <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
-                            <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
-                            <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
+                            <a href="https://www.instagram.com/prodigiogastrobar/" class="instagram" target="_blank"><span class="fa fa-instagram"></span></a>
                         </div>
                     </div>
                 </div>
@@ -183,18 +150,18 @@ Author URL: http://w3layouts.com
                     <div class="col-lg-3 col-sm-6">
                         <div class="address-grid">
                             <h5>Carrera 1 N° 71 - 301, Terrazas de la Florida, <br> Manizales Caldas.</h5>
-                            <h5 class="mt-sm-5 mt-4">Martes - Jueves: <span> 2 PM - 10 PM</span> <br> Viernes - Domingo: <span> 2 PM - 12 PM</span></h5>
+                            <h5 class="mt-sm-5 mt-4">Martes a Jueves - Domingo: <br><span> 2 PM - 10 PM</span> <br> Viernes - Sabado: <br><span> 2 PM - 2 AM</span></h5>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6 mt-sm-0 mt-4">
                         <div class="address-grid">
                             <h5>Telefono</h5>
-                            <h5 class="phone-number-text mt-2"><a href="tel:+57 3213772519">(+57)321 1232312</a></h5>
+                            <h5 class="phone-number-text mt-2"><a href="tel:+57 3206339067">(+57)320 6339067</a></h5>
                         </div>
                         <div class="address-grid mt-sm-5 mt-4">
                             <h5>E-mail</h5>
-                            <h5 class="email-cont-text mt-1"> <a href="mailto:prodigio@mail.com"
-                                    class="mail">prodigio@mail.com</a></h5>
+                            <h5 class="email-cont-text mt-1"> <a href="mailto:prodigiogastrobar1@gmail.com"
+                                    class="mail">prodigiogastrobar1@gmail.com</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-6 col-sm-5 footer-list-menu pl-lg-0 mt-lg-0 mt-sm-5 mt-4">
