--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Author URL: http://w3layouts.com
                             <a class="nav-link" href="about.html">Acerca de nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Menú</a>
+                            <a class="nav-link" href="menu.html">Menú</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contáctanos</a>
@@ -68,9 +68,9 @@ Author URL: http://w3layouts.com
                     <div>
                         <h3 class="text-white mb-4">Bienvenido a Prodigio <br>
                             Gastro Bar <span class="type-js"><span class="text-js">¡La mejor experiencia!</span></span></h3>
-                        <p class="banner-text text-white">Abierto de Martes a Jueves - <span>2 pm a 10 Pm</span>
+                        <p class="banner-text text-white">Abierto de Martes a Jueves - Domingo - <span>2 PM a 10 PM</span>
                         </p>
-                        <p class="banner-text text-white">Abierto de Viernes a Domingo - <span>2 pm a 12 Pm</span>
+                        <p class="banner-text text-white">Abierto de Viernes - Sabado - <span>2 PM a 2 AM</span>
                         </p>
                         <a class="btn btn-style-white btn-style-border mt-5" href="about.html">Sobre nosotros</a>
                     </div>
@@ -81,7 +81,7 @@ Author URL: http://w3layouts.com
                             <img src="assets/images/coctel.jpg" class="img-responsive" alt="" />
                             <div class="img-ban-sec">
                                 <h5>Cócteles</h5>
-                                <a href="error.html" class="btn p-0">Más <i class="fa fa-angle-right ml-1"
+                                <a href="menu.html" class="btn p-0">Más <i class="fa fa-angle-right ml-1"
                                         aria-hidden="true"></i></a>
                             </div>
                         </div>
@@ -89,7 +89,7 @@ Author URL: http://w3layouts.com
                             <img src="assets/images/comida.jpg" class="img-responsive" alt="" />
                             <div class="img-ban-sec">
                                 <h5>Comida</h5>
-                                <a href="error.html" class="btn p-0">Más <i class="fa fa-angle-right ml-1"
+                                <a href="menu.html" class="btn p-0">Más <i class="fa fa-angle-right ml-1"
                                         aria-hidden="true"></i></a>
                             </div>
                         </div>
@@ -170,7 +170,7 @@ Author URL: http://w3layouts.com
                             </div>
                         </div>
                     </div>
-                    <a class="btn btn-style-dark btn-style-border-dark mt-5" href="error.html">Ver Más</a>
+                    <a class="btn btn-style-dark btn-style-border-dark mt-5" href="menu.html">Ver Más</a>
                 </div>
                 <div class="col-lg-6 recipe-right pl-5">
                     <img src="assets/images/image1.svg" alt="" class="img-fluid img-responsive" />
@@ -271,74 +271,74 @@ Author URL: http://w3layouts.com
                 </div>
                 <div class="row galler-top">
                     <div class="col-md-4 col-sm-6 protfolio-item hover14">
-                        <a href="error.html" data-lightbox="example-set" data-title="Branding Design">
+                        <a href="menu.html" data-lightbox="example-set" data-title="Branding Design">
                             <figure>
                                 <img src="assets/images/g1.jpg" alt="product" class="img-fluid">
                                 <div class="p-4">
                                     <p class="text-black">Prodigio</p>
-                                    <a href="error.html" class="mb-5 img-title text-black">Cóctel de Camarón</a>
+                                    <a href="menu.html" class="mb-5 img-title text-black">Cóctel de Camarón</a>
                                 </div>
                             </figure>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-sm-0 mt-4">
-                        <a href="error.html" data-lightbox="example-set" data-title="Gradient Website Development">
+                        <a href="menu.html" data-lightbox="example-set" data-title="Gradient Website Development">
                             <figure>
                                 <img src="assets/images/g2.jpg" alt="product" class="img-fluid">
                                 <div class="p-4">
                                     <p class="text-black">Prodigio</p>
-                                    <a href="error.html" class="mb-5 img-title text-black">Guacamole de chicharrón</a>
+                                    <a href="menu.html" class="mb-5 img-title text-black">Guacamole de chicharrón</a>
                                 </div>
                             </figure>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-md-0 mt-4">
-                        <a href="error.html" data-lightbox="example-set" data-title="Design and Development">
+                        <a href="menu.html" data-lightbox="example-set" data-title="Design and Development">
                             <figure>
                                 <img src="assets/images/g3.jpg" alt="product" class="img-fluid">
                                 <div class="p-4">
                                     <p class="text-black">Prodigio</p>
-                                    <a href="error.html" class="mb-5 img-title text-black">Queso parrillada</a>
+                                    <a href="menu.html" class="mb-5 img-title text-black">Queso parrillada</a>
                                 </div>
                             </figure>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-4">
-                        <a href="error.html" data-lightbox="example-set" data-title="Magazine Content Writing">
+                        <a href="menu.html" data-lightbox="example-set" data-title="Magazine Content Writing">
                             <figure>
                                 <img src="assets/images/g4.jpg" alt="product" class="img-fluid">
                                 <div class="p-4">
                                     <p class="text-black">Prodigio</p>
-                                    <a href="error.html" class="mb-5 img-title text-black">Totopos Jalisco</a>
+                                    <a href="menu.html" class="mb-5 img-title text-black">Totopos Jalisco</a>
                                 </div>
                             </figure>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-4">
-                        <a href="error.html" data-lightbox="example-set" data-title="Magazine Content Writing">
+                        <a href="menu.html" data-lightbox="example-set" data-title="Magazine Content Writing">
                             <figure>
                                 <img src="assets/images/g5.jpg" alt="product" class="img-fluid">
                                 <div class="p-4">
                                     <p class="text-black">Prodigio</p>
-                                    <a href="error.html" class="mb-5 img-title text-black">Molcajete de camarón</a>
+                                    <a href="menu.html" class="mb-5 img-title text-black">Molcajete de camarón</a>
                                 </div>
                             </figure>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-4">
-                        <a href="error.html" data-lightbox="example-set" data-title="Magazine Content Writing">
+                        <a href="menu.html" data-lightbox="example-set" data-title="Magazine Content Writing">
                             <figure>
                                 <img src="assets/images/g6.jpg" alt="product" class="img-fluid">
                                 <div class="p-4">
                                     <p class="text-black">Prodigio</p>
-                                    <a href="error.html" class="mb-5 img-title text-black">Langostino al panko</a>
+                                    <a href="menu.html" class="mb-5 img-title text-black">Langostino al panko</a>
                                 </div>
                             </figure>
                         </a>
                     </div>
                 </div>
                 <div class="text-center">
-                    <a href="error.html" class="btn btn-style-white btn-style-primary mt-lg-5 mt-2">Ver Nuestro Menú</a>
+                    <a href="menu.html" class="btn btn-style-white btn-style-primary mt-lg-5 mt-2">Ver Nuestro Menú</a>
                 </div>
             </div>
         </div>
@@ -359,10 +359,7 @@ Author URL: http://w3layouts.com
                         <h6 class="foot-sub-title">Contáctanos</h6>
 
                         <div class="main-social-footer-29">
-                            <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
-                            <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
-                            <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
-                            <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
+                            <a href="https://www.instagram.com/prodigiogastrobar/" class="instagram" target="_blank"><span class="fa fa-instagram"></span></a>
                         </div>
                     </div>
                 </div>
@@ -370,18 +367,18 @@ Author URL: http://w3layouts.com
                     <div class="col-lg-3 col-sm-6">
                         <div class="address-grid">
                             <h5>Carrera 1 N° 71 - 301, Terrazas de la Florida, <br> Manizales Caldas.</h5>
-                            <h5 class="mt-sm-5 mt-4">Martes - Jueves: <span> 2 PM - 10 PM</span> <br> Viernes - Domingo: <span> 2 PM - 12 PM</span></h5>
+                            <h5 class="mt-sm-5 mt-4">Martes a Jueves - Domingo: <br><span> 2 PM - 10 PM</span> <br> Viernes - Sabado: <br><span> 2 PM - 2 AM</span></h5>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6 mt-sm-0 mt-4">
                         <div class="address-grid">
                             <h5>Telefono</h5>
-                            <h5 class="phone-number-text mt-2"><a href="tel:+57 3213772519">(+57)321 1232312</a></h5>
+                            <h5 class="phone-number-text mt-2"><a href="tel:+57 3206339067">(+57)320 6339067</a></h5>
                         </div>
                         <div class="address-grid mt-sm-5 mt-4">
                             <h5>E-mail</h5>
-                            <h5 class="email-cont-text mt-1"> <a href="mailto:prodigio@mail.com"
-                                    class="mail">prodigio@mail.com</a></h5>
+                            <h5 class="email-cont-text mt-1"> <a href="mailto:prodigiogastrobar1@gmail.com"
+                                    class="mail">prodigiogastrobar1@gmail.com</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-6 col-sm-5 footer-list-menu pl-lg-0 mt-lg-0 mt-sm-5 mt-4">
