Add license, upd template

--- a/error.html
+++ b/error.html
@@ -3,17 +3,16 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
+     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
-    <title>Prodigio: Gastro Bar - 404</title>
+    <title>Bistros - Restaurants Category Responsive Website Template - 404 </title>
     <!-- google-fonts -->
     <link href="//fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
     <!-- //google-fonts -->
     <!-- Template CSS Style link -->
-    <link rel="stylesheet" href="assets/css/style-starter.css">
+    <link rel="stylesheet" href="assets/css/style-liberty.css">
 </head>
 
 <body>
@@ -23,8 +22,13 @@
             <div class="w3l-error-block">
                 <div class="content ml-auto position-relative" style="max-width:400px">
                     <h1>404</h1>
-                    <p class="text-white">Error 404... No se encuentra nada</p>
-                    <a href="index.html" class="btn btn-style-white btn-style-primary mt-5">Volver al Inicio</a>
+                    <p class="text-white">Error 404... Nothing was found</p>
+                    <form action="#" method="GET" class="search-error position-relative mt-4 mx-auto"
+                        style="max-width:450px">
+                        <input type="search" class="search-input" placeholder="Search here.." required="">
+                        <button class="btn error-btn"><span class="fa fa-search"></span></button>
+                    </form>
+                    <a href="index.html" class="btn btn-style-white btn-style-primary mt-5">Back to Home</a>
                 </div>
             </div>
         </div>
