--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
 <!doctype html>
 <html lang="es">
 
@@ -10,13 +6,13 @@ Author URL: http://w3layouts.com
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
-    <title>Prodigio: Gastro Bar</title>
+    <title>Prodigio Gastro Bar</title>
     <!-- google-fonts -->
     <link href="//fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
     <!-- //google-fonts -->
     <!-- Template CSS Style link -->
-    <link rel="stylesheet" href="assets/css/style-starter.css">
+    <link rel="stylesheet" href="assets/css/style-liberty.css">
 </head>
 
 <body>
@@ -393,7 +389,7 @@ Author URL: http://w3layouts.com
                 <!-- copyright -->
                 <div class="w3l-copyright mt-lg-5 mt-sm-4 pt-md-4 pt-3">
                     <div class="row bottom-copies pt-md-5 pt-4 mt-md-5 mt-4">
-                        <p class="col-lg-8 copy-footer-29">© 2024 Prodigio. Todos los derechos reservados. </a></p>
+                        <p class="col-lg-8 copy-footer-29">© 2024 N.E.A Tech. Todos los derechos reservados. </a></p>
 
                         <div class="col-lg-4 footer-list-29 mt-lg-0 mt-md-4 mt-2">
                             <ul class="d-flex text-lg-right">
