upd style button menu

--- a/menu.html
+++ b/menu.html
@@ -73,6 +73,10 @@
     <!-- menu -->
     <div class="menu-w3ls py-5" id="menu">
         <div class="container py-md-5 py-4">
+            <div class="text-center">
+                <a href="https://prodigiogastrobar.com/Menu_Prodigio.pdf" download="Carta_Restaurante" class="btn btn-style-white-dw btn-style-primary-dw mt-lg-5 mt-2">Descargar Menú</a>
+            </div>
+            <br><br><br>
             <h3 class="title-big mb-2">Entradas</h3>
             <div class="row menu-body">
                 <!-- Section starts: Entradas -->
