--- a/menuprodigio.html
+++ b/menuprodigio.html
@@ -28,15 +28,16 @@
         <!-- //inner banner -->
 
         <!-- about section -->
-        <section class="w3l-text-6 py-5" id="about">
-
-            <div class="row justify-content-center text-center">
-                <div class="col-md-8">
-                    <div class="section-heading mb-sm-5 mb-4">
-                        <img src="assets/images/Logo.svg" alt="logo" title="Prodigio"/>
-                        <a href="https://prodigiogastrobar.com/Menu_Prodigio.pdf" download="Carta_Restaurante" class="btn btn-style-white-dw mt-lg-5 mt-2">Descargar Menú</a>
-                        <br><br><br><br>       
-                        <iframe src="https://docs.google.com/gview?url=https://prodigiogastrobar.com/Menu_Prodigio.pdf&embedded=true" width="100%" height="600px" frameborder="0"></iframe>
+        <section class="w3l-about-2 py-5" id="about">
+            <div class="container py-md-5 py-4">
+                <div class="row justify-content-center align-items-center pb-lg-5r">
+                    <div class="col-md-8">
+                        <div class="section-heading mb-sm-5 mb-4 text-center">
+                            <img src="assets/images/Logo.svg" alt="logo" title="Prodigio"/>
+                            <a href="https://prodigiogastrobar.com/Menu_Prodigio.pdf" download="Carta_Restaurante" class="btn btn-style-white-dw btn-style-primary-dw mt-lg-5 mt-2">Descargar Menú</a>
+                            <br><br><br><br>       
+                            <iframe src="https://docs.google.com/gview?url=https://prodigiogastrobar.com/Menu_Prodigio.pdf&embedded=true" width="100%" height="600px" frameborder="0"></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
