Add tag of google tag manager

--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <html lang="es">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w,d,s,l,i){
+            w[l]=w[l]||[];w[l].push(
+                {
+                    'gtm.start':
+                    new Date().getTime(),event:'gtm.js'
+                });
+            var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';
+            j.async=true;
+            j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;
+            f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-MJH2WC4M');
+    </script>
+    <!-- End Google Tag Manager -->
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,26 +35,15 @@
     <!-- //google-fonts -->
     <!-- Template CSS Style link -->
     <link rel="stylesheet" href="assets/css/style-liberty.css">
-
-    <script type="application/ld+json">
-        {
-          "@context": "https://schema.org",
-          "@type": "Organization",
-          "url": "https://prodigiogastrobar.com",
-          "name": "Prodigio Gastro Bar",
-          "description": "Ofrecemos experiencias culinarias únicas, con alta coctelería y una fusión gastronómica de primer nivel.",
-          "logo": {
-            "@type": "ImageObject",
-            "url": "https://prodigiogastrobar.com/assets/images/Logo.svg",
-            "width": 300,
-            "height": 300
-          }
-        }
-    </script>
-
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MJH2WC4M"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!--header-->
     <header id="site-header" class="fixed-top">
         <div class="container-fluid">
